<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/about_activity_bg"
    android:orientation="vertical">

    <include layout="@layout/app_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:src="@drawable/wanandroid_logo" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about_rlAPI"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:paddingLeft="5dp">

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/about_label_api" />

        <TextView
            style="@style/AppTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/about_ivOpenAPI"
            android:gravity="center_vertical"
            android:text="@string/about_api" />

        <ImageView
            android:id="@+id/about_ivOpenAPI"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/about_item_open_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about_rlGithub"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:paddingLeft="5dp">

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/about_label_github" />

        <TextView
            style="@style/AppTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/about_ivOpenGithub"
            android:gravity="center_vertical"
            android:text="@string/about_github" />

        <ImageView
            android:id="@+id/about_ivOpenGithub"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/about_item_open_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about_rlAuthor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingLeft="5dp">

        <TextView
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/about_label_author" />

        <TextView
            style="@style/AppTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/about_ivOpenAuthorBlog"
            android:gravity="center_vertical"
            android:text="@string/about_author" />

        <ImageView
            android:id="@+id/about_ivOpenAuthorBlog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/about_item_open_icon" />
    </RelativeLayout>

</LinearLayout>
